--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Examples.Basic.TextTest</StartupObject>
+    <StartupObject>Examples.Basic.ECSTest</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -78,9 +78,11 @@
     <ApplicationIcon>SoulEngine2018.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Raya, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\SoulEngine\Libraries\Raya\Raya.dll</HintPath>
+    <Reference Include="BreathLib">
+      <HintPath>..\SoulEngine\Libraries\Render\BreathLib.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenTK">
+      <HintPath>..\SoulEngine\Libraries\Render\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="SoulLib">
       <HintPath>..\SoulEngine\Libraries\Utility\SoulLib.dll</HintPath>
@@ -98,8 +100,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Basic\ECSTest.cs" />
     <Compile Include="Basic\PhysicsTest.cs" />
-    <Compile Include="Basic\ShapeTest.cs" />
+    <Compile Include="Systems\TestSystem.cs" />
+    <None Include="Basic\ShapeTest.cs" />
     <Compile Include="Basic\TextTest.cs" />
     <Compile Include="Basic\TextureTest.cs" />
     <Compile Include="ESScript\ElectricSleepViewer.cs" />
@@ -110,8 +114,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="ESScript\ESScriptTree.cs" />
-    <Compile Include="ESScript\NodeLink.cs" />
-    <Compile Include="ESScript\ScriptNode.cs" />
+    <None Include="ESScript\NodeLink.cs" />
+    <None Include="ESScript\ScriptNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -131,6 +135,7 @@
     <None Include="Assets\imageTest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Compile Include="Basic\CoreTest.cs" />
     <Content Include="ESScript\About.txt" />
     <Content Include="SoulEngine2018.ico" />
   </ItemGroup>
@@ -141,6 +146,7 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)AssetPacker\bin\$(PlatformName)\$(Configuration)\AssetPacker.exe" "$(TargetDir) "</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
