--- a/SoulEngine/packages.config
+++ b/SoulEngine/packages.config
@@ -1,38 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Esprima" version="1.0.0-beta-001" targetFramework="net452" />
-  <package id="jint" version="3.0.0-beta-001" targetFramework="net452" />
-  <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net452" />
-  <package id="NETStandard.Library" version="1.6.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="System.Collections" version="4.0.11" targetFramework="net452" />
-  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
-  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net452" />
-  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net452" />
-  <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="net452" />
-  <package id="System.Globalization" version="4.0.11" targetFramework="net452" />
-  <package id="System.IO" version="4.1.0" targetFramework="net452" />
-  <package id="System.IO.Compression" version="4.1.0" targetFramework="net452" />
-  <package id="System.Linq" version="4.1.0" targetFramework="net452" />
-  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.1.0" targetFramework="net452" />
-  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net452" />
-  <package id="System.ObjectModel" version="4.0.12" targetFramework="net452" />
-  <package id="System.Reflection" version="4.1.0" targetFramework="net452" />
-  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net452" />
-  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net452" />
-  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net452" />
-  <package id="System.Runtime" version="4.1.0" targetFramework="net452" />
-  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net452" />
-  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net452" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
-  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="net452" />
-  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net452" />
-  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net452" />
-  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net452" />
-  <package id="System.Threading" version="4.0.11" targetFramework="net452" />
-  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net452" />
-  <package id="System.Threading.Timer" version="4.0.1" targetFramework="net452" />
-  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net452" />
-  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net452" />
+  <package id="Esprima" version="1.0.0-beta-001" targetFramework="net461" />
+  <package id="ILMerge" version="2.14.1208" targetFramework="net461" />
+  <package id="jint" version="3.0.0-beta-001" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net461" />
+  <package id="MSBuild.ILMerge.Task" version="1.0.5" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
 </packages>
