--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Examples.Basic.ECSTest</StartupObject>
+    <StartupObject>Examples.Basic.ShapeTest</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -103,7 +103,7 @@
     <Compile Include="Basic\ECSTest.cs" />
     <Compile Include="Basic\PhysicsTest.cs" />
     <Compile Include="Systems\TestSystem.cs" />
-    <None Include="Basic\ShapeTest.cs" />
+    <Compile Include="Basic\ShapeTest.cs" />
     <Compile Include="Basic\TextTest.cs" />
     <Compile Include="Basic\TextureTest.cs" />
     <Compile Include="ESScript\ElectricSleepViewer.cs" />
