--- a/SoulEngine/SoulEngine.csproj
+++ b/SoulEngine/SoulEngine.csproj
@@ -115,6 +115,10 @@
   <ItemGroup>
     <Compile Include="Engine\Core.cs" />
     <Compile Include="Engine\ECS\ComponentBase.cs" />
+    <Compile Include="Engine\ECS\Components\PhysicsObject.cs" />
+    <Compile Include="Engine\ECS\Systems\ComponentUpdateCleanup.cs" />
+    <Compile Include="Engine\ECS\Systems\PhysicsEngine.cs" />
+    <Compile Include="Engine\Enums\PhysicsShapeType.cs" />
     <Compile Include="Engine\Graphics\Components\RenderData_Templates.cs" />
     <Compile Include="Engine\Graphics\Components\RenderData.cs" />
     <Compile Include="Engine\ECS\Components\Transform.cs" />
@@ -122,6 +126,7 @@
     <Compile Include="Engine\Graphics\Systems\RenderSystem.cs" />
     <Compile Include="Engine\Enums\ErrorOrigin.cs" />
     <Compile Include="Engine\Enums\DebugMessageType.cs" />
+    <Compile Include="Engine\Helpers.cs" />
     <Compile Include="Engine\Modules\Debugging.cs" />
     <Compile Include="Engine\Meta.cs" />
     <Compile Include="Engine\Modules\ErrorHandling.cs" />
@@ -142,9 +147,7 @@
     <Content Include="ILMergeOrder.txt" />
     <Content Include="SoulEngine2018.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Engine\ECS\Systems\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
