AssetPacker returns. Texture loading, texture rendering. Breath updated.

--- a/SoulEngine/SoulEngine.csproj
+++ b/SoulEngine/SoulEngine.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Engine\Enums\ErrorOrigin.cs" />
     <Compile Include="Engine\Enums\DebugMessageType.cs" />
     <Compile Include="Engine\Helpers.cs" />
+    <Compile Include="Engine\Modules\AssetManager.cs" />
     <Compile Include="Engine\Modules\Debugging.cs" />
     <Compile Include="Engine\Meta.cs" />
     <Compile Include="Engine\Modules\ErrorHandling.cs" />
