--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Examples.Basic.TextureTest</StartupObject>
+    <StartupObject>Examples.Basic.ShapeTest</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -103,21 +103,17 @@
     <Compile Include="Basic\ECSTest.cs" />
     <Compile Include="Basic\InputTest.cs" />
     <Compile Include="Basic\PhysicsTest.cs" />
-    <Compile Include="Systems\TransformCleanup.cs" />
+    <Compile Include="Basic\EntityCleanupTest.cs" />
     <Compile Include="Systems\TestSystem.cs" />
     <Compile Include="Basic\ShapeTest.cs" />
     <Compile Include="Basic\TextTest.cs" />
     <Compile Include="Basic\TextureTest.cs" />
-    <Compile Include="ESScript\ElectricSleepViewer.cs" />
     <None Include=".nobuild">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Assets\testFont.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="ESScript\ESScriptTree.cs" />
-    <None Include="ESScript\NodeLink.cs" />
-    <None Include="ESScript\ScriptNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -138,7 +134,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="Basic\CoreTest.cs" />
-    <Content Include="ESScript\About.txt" />
     <Content Include="SoulEngine2018.ico" />
   </ItemGroup>
   <ItemGroup />
