--- a/SoulEngine/packages.config
+++ b/SoulEngine/packages.config
@@ -1,14 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Esprima" version="1.0.0-beta-001" targetFramework="net461" />
   <package id="ILMerge" version="2.14.1208" targetFramework="net461" />
-  <package id="jint" version="3.0.0-beta-001" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net461" />
+  <package id="Jint" version="2.11.58" targetFramework="net45" />
   <package id="MSBuild.ILMerge.Task" version="1.0.5" targetFramework="net461" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="OpenTK" version="2.0.0" targetFramework="net461" />
+  <package id="SharpFont" version="4.0.1" targetFramework="net45" />
+  <package id="SharpFont.Dependencies" version="2.6" targetFramework="net45" />
 </packages>
