Text Rendering Progress

--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -86,7 +86,8 @@
     <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.2.0.0\lib\net20\OpenTK.dll</HintPath>
     </Reference>
-    <Reference Include="SoulLib">
+    <Reference Include="SoulLib, Version=9.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SoulEngine\Libraries\Utility\SoulLib.dll</HintPath>
     </Reference>
     <Reference Include="SoulPhysics">
