--- a/SoulEngine/SoulEngine.csproj
+++ b/SoulEngine/SoulEngine.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Engine\Graphics\Components\RenderData.cs" />
     <Compile Include="Engine\ECS\Components\Transform.cs" />
     <Compile Include="Engine\ECS\Entity.cs" />
+    <Compile Include="Engine\Graphics\Font.cs" />
     <Compile Include="Engine\Graphics\Systems\RenderSystem.cs" />
     <Compile Include="Engine\Enums\ErrorOrigin.cs" />
     <Compile Include="Engine\Enums\DebugMessageType.cs" />
